made responsive to large displays

--- a/src/app/modules/ngx-mat-drp/calendar-wrapper/calendar-wrapper.component.css
+++ b/src/app/modules/ngx-mat-drp/calendar-wrapper/calendar-wrapper.component.css
@@ -29,7 +29,9 @@
 
 @media screen and (min-width: 601px) {
     .mat-calendar {
-        width: 250px;
-        height: 300px;
+        width: 15vw;
+        height: 30vh;
+        min-width: 250px;
+        min-height: 300px;
     }
 }
